Add supported templates to playground

--- a/agent/src/main/resources/playground/basic-message.html
+++ b/agent/src/main/resources/playground/basic-message.html
@@ -14,7 +14,7 @@
     <pre>
         <code>
         Nessus DIDComm CLI
-        Version: ${version}
+        Version: ${nessusVersion}
 
         >> agent start
 
