--- a/agent/src/main/resources/playground/trust-ping.html
+++ b/agent/src/main/resources/playground/trust-ping.html
@@ -16,7 +16,7 @@
     <pre>
         <code>
         Nessus DIDComm CLI
-        Version: ${version}
+        Version: ${nessusVersion}
 
         >> agent start
 
