--- a/agent/src/main/resources/playground/index.html
+++ b/agent/src/main/resources/playground/index.html
@@ -1,26 +1,31 @@
 <html>
 <head>
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/index.css"/>
 </head>
 <body>
     <h1>Nessus DIDComm - Playground</h1>
         <div>
             Version: ${nessusVersion}
-            <p>
+            <div style="padding-top:5px;font-size:smaller;color:grey;">Rev: ${buildNumber}</div>
+            <p/>
             <table>
             ${walletDids}
             </table>
-            <p>
+            <p/>
             <a href='/playground?method=peer'>did:peer</a>, <a href='/playground?method=key'>did:key</a>
         </div>
 
     <h2>Supported Features/Protocols</h2>
+
+        <p/>
         <div style="padding-left:20px">
             <ul>
                 <li><a href='/playground/oob-invitation?method=${method}'>out-of-bound invitation</a></li>
                 <li><a href='/playground/trust-ping?method=${method}'>trust ping</a></li>
                 <li><a href='/playground/basic-message?method=${method}'>basic message</a></li>
                 <li><a href='/playground/propose-credential?method=${method}'>propose credential</a></li>
+                <li><a href='/playground/present-credential' style="color:grey;">present credential (tbd)</a></li>
+                <li><a href='/playground/problem-reports' style="color:grey;">problem reports (tbd)</a></li>
             </ul>
         </div>
 
@@ -34,34 +39,33 @@
     <h2>Use Case: International Travel with Minor</h2>
 
         <div style="padding-left:20px">
+
             <a href="https://www.w3.org/TR/vc-use-cases/#international-travel-with-minor-and-upgrade" target="_blank">https://www.w3.org/TR/vc-use-cases</a>
 
             <h3>Background</h3>
-            <p>
+            <p/>
             Malathi is traveling internationally with her 8-month-old son, Anand. His father, Rajesh, is staying home.
             Malathi has enough frequent flyer miles to upgrade the ticket to first class.
 
             <h3>Distinction</h3>
-            <p>
+            <p/>
             This use case is difficult because:
             <ul>
-                <li>Current US passports do not establish explicit relationship between parent and child.
-                <li>When one parent travels with a minor, the other parent is required to grant permission for the trip, thus implying guardianship or responsibility.
-                <li>The DID or other Digital Identity system replaces the role of the notary in the paper/physical world.
-                <li>Credentials must be coordinated between two verifiers (agent and airline) for two individuals, and a digital coupon is used.
-                <li>The relationship of the minor to the non-traveling parent must be established, in order for the permission to be considered.
-                <li>In the minor's passport case, the subject is not the holder of the verifiable credential. The holder of the passport is a parent, not the minor.
+                <li>Current US passports do not establish explicit relationship between parent and child.</li>
+                <li>When one parent travels with a minor, the other parent is required to grant permission for the trip, thus implying guardianship or responsibility.</li>
+                <li>The DID or other Digital Identity system replaces the role of the notary in the paper/physical world.</li>
+                <li>Credentials must be coordinated between two verifiers (agent and airline) for two individuals, and a digital coupon is used.</li>
+                <li>The relationship of the minor to the non-traveling parent must be established, in order for the permission to be considered.</li>
+                <li>In the minor's passport case, the subject is not the holder of the verifiable credential. The holder of the passport is a parent, not the minor.</li>
             </ul>
 
             <h3>Scenario</h3>
-            <p>
-            Malathi obtains permission from Rajesh stating she is allowed to take the baby out of the country.
-            <p>
-            Prior to booking the trips, Malathi visits HappyAir.com to request an upgrade to first class. HappyAir issues a verifiable credential redeemable for a first class upgrade on an international flight.
-            <p>
-            She books the plane tickets through her travel agent who adds the lap child to the ticket.
-            <p>
-            HappyAir verifies that Malathi has a signed statement from Anand's other parent stating that she may exit the country with him.
+            <p/>
+            Malathi obtains permission from Rajesh stating she is allowed to take the baby out of the country.<br/>
+            Prior to booking the trips, Malathi visits HappyAir.com to request an upgrade to first class.
+            HappyAir issues a verifiable credential redeemable for a first class upgrade on an international flight.<br/>
+            She books the plane tickets through her travel agent who adds the lap child to the ticket.<br/>
+            HappyAir verifies that Malathi has a signed statement from Anand's other parent stating that she may exit the country with him.<br/>
         </div>
 
     <h2>Run the CLI from Docker</h2>
