--- a/agent/src/main/resources/playground/propose-credential.html
+++ b/agent/src/main/resources/playground/propose-credential.html
@@ -3,25 +3,29 @@
     <link rel="stylesheet" href="/index.css">
 </head>
 <body>
-    <a href="/playground?method=${method}">Home</a>
+    <a href="/playground?method=${method}" style="font-size:smaller;">Home</a>
 
     <h2>Propose Verifiable Credential</h2>
 
-    <div>
-    <pre>
-        <code>
-        Nessus DIDComm CLI
-        Version: ${nessusVersion}
+    <div style="padding-left:20px;">
 
-        >> agent start
+        <a href="https://github.com/decentralized-identity/waci-didcomm/tree/main/issue_credential" target="_blank" style="font-size:smaller;">
+            https://github.com/decentralized-identity/.../issue_credential</a>
 
-        >> wallet create --name Malathi
+        <div>
+        <pre><code>
+    Nessus DIDComm CLI
+    Version: ${nessusVersion}
 
-        Malathi>> protocol invitation receive --inviter=Government --url=http://${Host}/message/invitation?inviter=Government&method=${method}
+    >> agent start
 
-        Malathi>> vc propose -t Passport -i Government.Did -s Malathi.Did --data={"givenName": "Malathi", "familyName": "Hamal", "citizenship": "US"}
-        </code>
-    </pre>
+    >> wallet create --name Malathi
+
+    Malathi>> protocol invitation receive --inviter=Government --url=http://${Host}/message/invitation?inviter=Government&amp;method=${method}
+
+    Malathi>> vc propose -t Passport -i Government.Did -s Malathi.Did --data={"givenName": "Malathi", "familyName": "Hamal", "citizenship": "US"}
+        </code></pre>
+        </div>
     </div>
 </body>
 </html>
