Parameterize remote connection to the playground

--- a/agent/src/main/resources/playground/index.html
+++ b/agent/src/main/resources/playground/index.html
@@ -24,7 +24,7 @@
                 <li><a href='/playground/trust-ping?method=${method}'>trust ping</a></li>
                 <li><a href='/playground/basic-message?method=${method}'>basic message</a></li>
                 <li><a href='/playground/propose-credential?method=${method}'>propose credential</a></li>
-                <li><a href='/playground/present-credential' style="color:grey;">present credential (tbd)</a></li>
+                <li><a href='/playground/present-credential'>present credential</a></li>
                 <li><a href='/playground/problem-reports' style="color:grey;">problem reports (tbd)</a></li>
             </ul>
         </div>
