--- a/agent/src/main/resources/playground/present-credential.html
+++ b/agent/src/main/resources/playground/present-credential.html
@@ -5,7 +5,7 @@
 <body>
     <a href="/playground?method=${method}" style="font-size:smaller;">Home</a>
 
-    <h2>Present Verifiable Credential (TBD)</h2>
+    <h2>Present Verifiable Credential</h2>
 
     <div style="padding-left:20px;">
 
@@ -16,6 +16,8 @@
         <pre><code>
     Nessus DIDComm CLI
     Version: ${nessusVersion}
+
+    Malathi>> vc present -h Malathi.Did -y Airport.Did --vc Malathi.Passport.Vc
         </code></pre>
         </div>
     </div>
