--- a/agent/src/main/resources/dashboard/protocol/problem-reports.html
+++ b/agent/src/main/resources/dashboard/protocol/problem-reports.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="/index.css"/>
 </head>
 <body>
-    <a href="/playground?method=${method}" style="font-size:smaller;">Home</a>
+    <a href="/dashboard?method=${method}" style="font-size:smaller;">Home</a>
 
     <h2>Problem Reports (TBD)</h2>
 
