--- a/agent/src/main/resources/dashboard/protocol/trust-ping.html
+++ b/agent/src/main/resources/dashboard/protocol/trust-ping.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="/index.css"/>
 </head>
 <body>
-    <a href="/playground?method=${method}" style="font-size:smaller;">Home</a>
+    <a href="/dashboard?method=${method}" style="font-size:smaller;">Home</a>
 
     <h2>Trust Ping</h2>
 
@@ -26,12 +26,20 @@
 
     >> wallet create --name Malathi
 
-    Malathi>> protocol invitation receive --inviter=Government --url=http://${Host}/message/invitation?inviter=Government&amp;method=${method}
+    Malathi>> protocol invitation receive --inviter=Government --url=http://${Host}/invitation?inviter=Government&amp;method=${method}
 
     Malathi>> protocol trust-ping send
 
     Malathi>> message list
         </code></pre>
+        </div>
+
+        <h3>Example Messages</h3>
+        <div style="padding-left:20px">
+            <ul>
+                <li><a href="/dashboard/messages/trust-ping/2.0/ping.json">https://didcomm.org/trust-ping/2.0/ping</a></li>
+                <li><a href="/dashboard/messages/trust-ping/2.0/ping-response.json">https://didcomm.org/trust-ping/2.0/ping-response</a></li>
+            </ul>
         </div>
     </div>
 </body>
