[#127] Failure to route without Message.to header

--- a/agent/src/main/resources/dashboard/connections.html
+++ b/agent/src/main/resources/dashboard/connections.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <title>Nessus DIDComm - Dashboard</title>
     <link rel="stylesheet" href="/index.css"/>
 </head>
 <body>
@@ -8,7 +9,7 @@
     <h2>${walletName} Connections</h2>
 
     <table>
-        ${walletConnectionRows}
+    ${walletConnectionRows}
     </table>
 </body>
 </html>
