--- a/agent/src/main/resources/dashboard/messages.html
+++ b/agent/src/main/resources/dashboard/messages.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <title>Nessus DIDComm - Dashboard</title>
     <link rel="stylesheet" href="/index.css"/>
 </head>
 <body>
@@ -7,10 +8,8 @@
 
     <h2>${pconAlias} Messages</h2>
 
-    <p/>
     <table>
-        ${epmRows}
+    ${epmRows}
     </table>
-
 </body>
 </html>
