--- a/agent/src/main/resources/dashboard/protocol/issue-credential.html
+++ b/agent/src/main/resources/dashboard/protocol/issue-credential.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-    <link rel="stylesheet" href="/index.css">
+    <title>Nessus DIDComm - Dashboard</title>
+    <link rel="stylesheet" href="/index.css"/>
 </head>
 <body>
     <a href="/dashboard?method=${method}" style="font-size:smaller;">Home</a>
