Provide issuer/oauth metadata endpoints

--- a/portal/src/main/resources/static/index.html
+++ b/portal/src/main/resources/static/index.html
@@ -27,10 +27,17 @@
     </ul>
 
     View Metadata
-    <ul>
-        <li><a href="https://api-conformance.ebsi.eu/conformance/v3/issuer-mock/.well-known/openid-credential-issuer">EBSI Issuer Metadata</a></li>
-        <li><a href=".well-known/openid-credential-issuer">Nessus Issuer Metadata</a></li>
-    </ul>
-
+    <table>
+        <tr>
+            <td>EBSI</td>
+            <td><a href="https://api-conformance.ebsi.eu/conformance/v3/issuer-mock/.well-known/openid-credential-issuer">Issuer</a></td>
+            <td><a href="https://api-conformance.ebsi.eu/conformance/v3/auth-mock/.well-known/openid-configuration">OAuth</a></td>
+        </tr>
+        <tr>
+            <td>Nessus</td>
+            <td><a href="/issuer/.well-known/openid-credential-issuer">Issuer</a></td>
+            <td><a href="/oauth/.well-known/openid-configuration">OAuth</a></td>
+        </tr>
+    </table>
 </body>
 </html>
